# OpenWispr

./: .gitignore  README.md  test_mlx_download.rs
apps/desktop/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  cargo_errors.txt  cargo_final_errors.txt  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio.rs  fn_key_macos.rs  fn_key_windows.rs  llm_client.rs  llm_manager.rs  logger.rs  main.rs  models.rs  store.rs
crates/core-engine/: Cargo.toml
crates/core-engine/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs  models.rs  prompts.rs
crates/llm/src/adapters/: llamacpp.rs  mod.rs
crates/platform/: Cargo.toml
crates/platform-macos/: Cargo.toml
crates/platform-macos/src/: lib.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: lib.rs
crates/platform/src/: lib.rs
crates/stt/: Cargo.toml  README.md  build_log.txt
crates/stt/src/: lib.rs
crates/stt/src/adapters/: backend.rs  fallback.rs  mlx.rs  mlx_parakeet.rs  mlx_whisper.rs  mod.rs  sherpa.rs  whisper.rs
crates/text-processor/: Cargo.toml
crates/text-processor/src/: lib.rs  prompts.rs  tests.rs
docs/: README.md
scripts/: dev-check.ts  setup-macos.sh  setup-windows.ps1
ui/onboarding/: README.md
ui/settings/: README.md
