[package]
name = "llm"
version = "0.1.0"
edition = "2021"

[lib]
name = "llm"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt", "sync"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
ureq = { version = "2.10", default-features = true }
dirs = "5.0"
encoding_rs = "0.8"
llama-cpp-2 = "0.1.90"

[dev-dependencies]
tokio-test = "0.4"
