[package]
name = "stt"
version = "0.1.0"
edition = "2021"

[lib]
name = "stt"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt", "sync"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
ureq = { version = "2.10", default-features = true }
[target.'cfg(target_os = "windows")'.dependencies]
# Hardware acceleration is optional on Windows
whisper-rs = { version = "0.15", optional = true }

[features]
default = []
vulkan = ["whisper-rs/vulkan"]

[dev-dependencies]
tokio-test = "0.4"
