[package]
name = "stt"
version = "0.1.0"
edition = "2021"

[lib]
name = "stt"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt", "sync"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
ureq = { version = "2.10", default-features = true }
whisper-rs = "0.15"
sherpa-rs = { version = "0.6.8", default-features = false, features = ["download-binaries"] }
tar = "0.4"
bzip2 = "0.5"
hound = "3.5"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.15", features = ["vulkan"] }

[dev-dependencies]
tokio-test = "0.4"
