[package]
name = "openwispr-desktop-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.4", features = [ "macos-private-api", "shell-open"] }
cpal = "0.15"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
device_query = "2.1"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }
