[package]
name = "openwispr-desktop-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.4", features = [ "macos-private-api", "shell-open"] }
cpal = "0.15"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
device_query = "2.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-graphics = { version = "0.3.2", features = ["CGEvent", "CGEventTypes"] }
objc2-core-foundation = { version = "0.3.2", features = ["CFMachPort", "CFRunLoop", "CFString"] }

[build-dependencies]
tauri-build = { version = "1.4", features = [] }
