[package]
name = "openwispr-desktop-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.4", features = [ "system-tray", "macos-private-api", "shell-open"] }
cpal = "0.15"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
device_query = "2.1"
stt = { path = "../../../crates/stt" }
arboard = "3.6"
enigo = "0.1.3"
hound = "3.5"
chrono = "0.4"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"
objc2-core-graphics = { version = "0.3.2", features = ["CGEvent", "CGEventTypes"] }
objc2-core-foundation = { version = "0.3.2", features = ["CFMachPort", "CFRunLoop", "CFString"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

[build-dependencies]
tauri-build = { version = "1.4", features = [] }
